--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/server.ts",
-    "build": "tsc"
+    "start": "prisma generate && ts-node src/server.ts",
+    "build": "prisma generate && tsc"
   },
   "keywords": [],
   "author": "",
