--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "prisma generate && ts-node src/server.ts",
+    "start": "prisma generate && nodemon src/server.ts",
     "build": "prisma generate && tsc"
   },
   "keywords": [],
